fix the gap between grid and next button

--- a/public/css/photo-wall.css
+++ b/public/css/photo-wall.css
@@ -43,7 +43,6 @@ body {
 .grid {
   width: 100%;
   position: relative;
-  display: inline-block;
 }
 .grid-item {
   position: absolute;
